[workspace]
members = [
    "crates/osm-core",
    "crates/osm-loader",
    "crates/osm-renderer",
    "crates/osm-tile-engine",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
async-trait = "0.1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
jni = "0.21"
osm-core = { path = "crates/osm-core" }
osm-loader = { path = "crates/osm-loader" }
osm-renderer = { path = "crates/osm-renderer" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "deflate"] }
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread"] }
uniffi = { version = "0.31.1" }
wgpu = "29.0.1"
